build_result.txt
C:\Users\karti\.cargo\bin\cargo.exe :    Compiling aether-network v0.2.0 
(C:\Users\karti\Desktop\New folder (12)\aether-network)
At line:1 char:1
+ C:\Users\karti\.cargo\bin\cargo.exe build 2>&1 | Out-File -FilePath b ...
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (   Compiling ae...aether-network):Str 
   ing) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
warning: field `target_rate` is never read
  --> src\mixnet\traffic.rs:11:5
   |
 9 | pub struct TrafficShaper {
   |            ------------- field in this struct
10 |     /// Target traffic rate (packets per second)
11 |     target_rate: f64,
   |     ^^^^^^^^^^^
   |
   = note: `#[warn(dead_code)]` (part of `#[warn(unused)]`) on by default

warning: field `is_cover` is never read
  --> src\mixnet\traffic.rs:23:5
   |
21 | struct PacketTimestamp {
   |        --------------- field in this struct
22 |     timestamp: u64,
23 |     is_cover: bool,
   |     ^^^^^^^^
   |
   = note: `PacketTimestamp` has a derived impl for the trait `Clone`, but this is 
intentionally ignored during dead code analysis

warning: constant `SECURITY_PARAMETER` is never used
  --> src\protocols\sphinx.rs:10:7
   |
10 | const SECURITY_PARAMETER: usize = 16; // 128-bit security
   |       ^^^^^^^^^^^^^^^^^^

warning: field `bandwidth` is never read
  --> src\routing\multipath.rs:19:5
   |
17 | struct EdgeInfo {
   |        -------- field in this struct
18 |     latency_ms: u64,
19 |     bandwidth: u64,
   |     ^^^^^^^^^
   |
   = note: `EdgeInfo` has derived impls for the traits `Debug` and `Clone`, but 
these are intentionally ignored during dead code analysis

warning: missing documentation for a struct field
  --> src\crypto\kyber.rs:26:5
   |
26 |     pub public_key: PublicKey,
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: the lint level is defined here
  --> src\lib.rs:5:9
   |
 5 | #![warn(missing_docs)]
   |         ^^^^^^^^^^^^

warning: missing documentation for a struct field
  --> src\crypto\kyber.rs:27:5
   |
27 |     pub secret_key: SecretKey,
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^

warning: missing documentation for a struct field
   --> src\mixnet\node.rs:248:5
    |
248 |     pub packets_processed: u64,
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: missing documentation for a struct field
   --> src\mixnet\node.rs:249:5
    |
249 |     pub average_latency_ms: u64,
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: missing documentation for a struct field
   --> src\mixnet\node.rs:250:5
    |
250 |     pub reputation: f64,
    |     ^^^^^^^^^^^^^^^^^^^

warning: missing documentation for a struct field
   --> src\mixnet\node.rs:251:5
    |
251 |     pub queue_size: usize,
    |     ^^^^^^^^^^^^^^^^^^^^^

warning: missing documentation for an associated function
  --> src\mixnet\traffic.rs:27:5
   |
27 |     pub fn new(target_rate: f64, cover_ratio: f64) -> Self {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: missing documentation for an associated function
   --> src\mixnet\traffic.rs:117:5
    |
117 |     pub fn new(rate: f64) -> Self {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: missing documentation for a struct field
  --> src\protocols\packet.rs:44:5
   |
44 |     pub hops: Vec<PublicKey>,
   |     ^^^^^^^^^^^^^^^^^^^^^^^^

warning: missing documentation for an associated function
  --> src\routing\multipath.rs:23:5
   |
23 |     pub fn new() -> Self {
   |     ^^^^^^^^^^^^^^^^^^^^

warning: missing documentation for an associated function
  --> src\routing\reputation.rs:43:5
   |
43 |     pub fn new() -> Self {
   |     ^^^^^^^^^^^^^^^^^^^^

warning: missing documentation for a struct field
 --> src\proxy\socks5.rs:9:5
  |
9 |     pub bind_addr: String,
  |     ^^^^^^^^^^^^^^^^^^^^^

warning: missing documentation for a struct field
  --> src\proxy\socks5.rs:10:5
   |
10 |     pub config: Arc<AetherConfig>,
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: missing documentation for an associated function
  --> src\proxy\socks5.rs:14:5
   |
14 |     pub fn new(bind_addr: String, config: Arc<AetherConfig>) -> Self {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: missing documentation for a method
  --> src\proxy\socks5.rs:18:5
   |
18 |     pub async fn run(&self) -> Result<(), Box<dyn std::error::Error>> {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: missing documentation for a struct
 --> src\proxy\http_proxy.rs:5:1
  |
5 | pub struct HttpProxy {
  | ^^^^^^^^^^^^^^^^^^^^

warning: missing documentation for a struct field
 --> src\proxy\http_proxy.rs:6:5
  |
6 |     pub bind_addr: String,
  |     ^^^^^^^^^^^^^^^^^^^^^

warning: missing documentation for an associated function
  --> src\proxy\http_proxy.rs:10:5
   |
10 |     pub fn new(bind_addr: String) -> Self {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: missing documentation for a method
  --> src\proxy\http_proxy.rs:14:5
   |
14 |     pub async fn run(&self) -> Result<(), Box<dyn std::error::Error>> {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: missing documentation for a struct field
   --> src\privacy\metadata_hiding.rs:111:5
    |
111 |     pub commitment: [u8; 32],
    |     ^^^^^^^^^^^^^^^^^^^^^^^^

warning: missing documentation for a struct field
   --> src\privacy\metadata_hiding.rs:112:5
    |
112 |     pub challenge: [u8; 32],
    |     ^^^^^^^^^^^^^^^^^^^^^^^

warning: missing documentation for a struct field
   --> src\privacy\metadata_hiding.rs:113:5
    |
113 |     pub response: Vec<u8>,
    |     ^^^^^^^^^^^^^^^^^^^^^

warning: `aether-network` (lib) generated 26 warnings
warning: unused imports: `SphinxBuilder` and `SphinxProcessor`
 --> src\bin\ultimate_anonymity.rs:7:17
  |
7 |     protocols::{SphinxBuilder, SphinxProcessor},
  |                 ^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0277]: `?` couldn't convert the error: `dyn std::error::Error + Send + 
Sync: Sized` is not satisfied
  --> src\bin\ultimate_anonymity.rs:41:25
   |
41 |     loopix.start().await?;
   |     --------------------^ doesn't have a size known at compile-time
   |     |
   |     this can't be annotated with `?` because it has type `Result<_, Box<dyn 
std::error::Error + Send + Sync>>`
   |
   = help: the trait `Sized` is not implemented for `dyn std::error::Error + Send 
+ Sync`
   = note: the question mark operation (`?`) implicitly performs a conversion on 
the error value using the `From` trait
   = note: required for `Box<dyn std::error::Error + Send + Sync>` to implement 
`std::error::Error`
   = note: required for `Box<dyn std::error::Error>` to implement `From<Box<dyn 
std::error::Error + Send + Sync>>`

For more information about this error, try `rustc --explain E0277`.
warning: `aether-network` (bin "ultimate_anonymity") generated 1 warning
error: could not compile `aether-network` (bin "ultimate_anonymity") due to 1 
previous error; 1 warning emitted
warning: build failed, waiting for other jobs to finish...
